@@ -1,3 +1,11 @@
+2016-07-23  Marco Bellaccini <marco.bellaccini[at!]gmail.com>
+
+	* try to connect multiple times before giving up
+	
+2016-07-21  Marco Bellaccini <marco.bellaccini[at!]gmail.com>
+
+	* improved alert message support
+	
 2016-07-03  Marco Bellaccini <marco.bellaccini[at!]gmail.com>
 
 	* added Signature Algorithms Extension support in order to improve IIS/Schannel compatibility
